api/api.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: api
  name: api-deploy
spec:
  replicas: 1
  template:
    metadata:
      namespace: api
      labels:
        name: api-pods
    spec:
      containers:
        - image: cescoferraro/api:latest
          imagePullPolicy: Always
          name: api
