api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: api
  name: api-svc
spec:
  selector:
    name: api-pods
  ports:
  - name: web
    port: 80
    targetPort: 9000
    protocol: TCP
